--- a/app/config/.env
+++ b/app/config/.env
@@ -3,3 +3,4 @@ PORT=12346
 IP_ADDRESS_BF_SERVER=172.26.218.219
 PORT_BF=5555
 BLACKLIST_URLS=http://example.com,https://warning.com,http://danger.il
+CLIENT=3000
