--- a/app/config/.env
+++ b/app/config/.env
@@ -3,5 +3,5 @@ PORT=12346
 IP_ADDRESS_BF_SERVER=172.26.218.219
 PORT_BF=5555
 BLACKLIST_URLS=http://example.com,https://warning.com,http://danger.il
-CLIENT=3000
-IP_WEB_SERVER=13.49.76.183
+PORT_CLIENT=3000
+IP_WEB_SERVER=localhost
