--- a/app/.vscode/launch.json
+++ b/app/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:12346",
+            "url": "http://16.16.215.106:12346",
             "webRoot": "${workspaceFolder}"
         }
     ]
