ip bloom filter

--- a/app/config/.env
+++ b/app/config/.env
@@ -1,6 +1,6 @@
 CONNECTION_STRING=mongodb://localhost:27017
 PORT=12346
-IP_ADDRESS_BF_SERVER=172.26.218.219
+IP_ADDRESS_BF_SERVER=13.60.61.247
 PORT_BF=5555
 BLACKLIST_URLS=http://example.com,https://warning.com,http://danger.il
 PORT_CLIENT=3000
